--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rn_common_components",
+  "name": "rn-common-components",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -25,5 +25,13 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+  "description": "",
+  "main": "index.js",
+  "author": "wufeng",
+  "license": "ISC",
+  "files": [
+    "/index.js",
+    "/libs"
+  ]
 }
