--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rn-common-components",
-  "version": "0.0.1",
+  "name": "react-native-wf-components",
+  "version": "1.0.0",
   "private": false,
   "scripts": {
     "android": "react-native run-android",
@@ -10,8 +10,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@types/react": "^16.9.43",
+    "@types/react-native": "^0.63.0",
     "react": "16.13.1",
-    "react-native": "0.63.0"
+    "react-native": "0.63.0",
+    "tslib": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
@@ -21,14 +24,22 @@
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.13.1"
+    "react-native-typescript-transformer": "^1.2.13",
+    "react-test-renderer": "16.13.1",
+    "typescript": "^3.9.6"
   },
   "jest": {
     "preset": "react-native"
   },
+  "keywords": [
+    "react-native",
+    "react-native-common",
+    "react-native-common-components",
+    "react-native-components"
+  ],
   "description": "",
   "main": "index.js",
-  "author": "wufeng",
+  "author": "wufengyc",
   "license": "ISC",
   "files": [
     "/index.js",
