--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/drawer": "^5.8.7",
+    "@react-navigation/native": "^5.7.2",
     "@types/react": "^16.9.43",
     "@types/react-native": "^0.63.0",
     "react": "16.13.1",
     "react-native": "0.63.0",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-reanimated": "^1.10.1",
+    "react-native-safe-area-context": "^3.1.1",
+    "react-native-screens": "^2.9.0",
+    "react-native-wf-common-components": "^1.0.4",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
@@ -37,6 +45,6 @@
     "react-native-common-components",
     "react-native-components"
   ],
-  "description": "",
+  "description": "ReactNative通用组件：在ReactNative项目开发过程中，经常会碰到一些非常通用的组件，所以这里封装出来使用。",
   "main": "index.js"
 }
